# BachelorCppRestructured

./: CMakeLists.txt
resources/: adjlist
src/: CMakeLists.txt  aStar.cpp  adjacencyList.h  dijkstra.cpp  dijkstra.h  fileReader.h  main.cpp  shortestPath.h  stressTest.cpp  tests.cpp  testsForAnalysis.cpp
src/headerLibs/: json.hpp
src/headers/: aStar.h  adjacencyList.h  dijkstra.h  fileReader.h  landmarks.h  shortestPath.h  util.h
src/implementation/: aStar.cpp  customNode.cpp  customWay.cpp  dijkstra.cpp  landmarks.cpp  nodesAndWaysWrapper.cpp
src/resources/: adjlist
